day1to10/cmd codes/lab3.txt
 Microsoft Windows [Version 10.0.19045.2673]
(c) Microsoft Corporation. All rights reserved.

C:\Users\sajal>python
Python 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> clear()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clear' is not defined
>>> clear()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clear' is not defined
>>> 3e86451205412
inf
>>> a=23
>>> b=a
>>> a=33
>>> a
33
>>> b
23
>>> a=[1,2,3,4]
>>> a1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'a1' is not defined. Did you mean: 'a'?
>>> a[1]
2
>>> b=(1,2,3,4)
>>> b(2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object is not callable
>>> b[2]
3
>>> b[1]=4
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object does not support item assignment
>>> a[1]=3
>>> a=list()
>>> a
[]
>>> a=[12,"sadas\'",22]
>>> a
[12, "sadas'", 22]
>>> b["sadasd",122]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: tuple indices must be integers or slices, not tuple
>>> b=["sadasd",122]
>>> b
['sadasd', 122]
>>> b=["sad\'asd",122]
>>> b
["sad'asd", 122]
>>> b.size
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'size'
>>> len(b)
2
>>> clear:lamda:os.system('cls')
  File "<stdin>", line 1
    clear:lamda:os.system('cls')
               ^
SyntaxError: invalid syntax
>>> clear=lamda:os.system('cls')
  File "<stdin>", line 1
    clear=lamda:os.system('cls')
               ^
SyntaxError: invalid syntax
>>> a=[1,2,3,4,5,6,6,7,8,9,0]
>>> a[2:5]
[3, 4, 5]
>>> a[0:3,5:7]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list indices must be integers or slices, not tuple
>>> a[0:6]
[1, 2, 3, 4, 5, 6]
>>> a[0:6:2]
[1, 3, 5]
>>>